--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,6 @@ body, html {
     width: 100%;
     height: 100%;
     background: url("singularity.jpg") center center / cover no-repeat;
-    filter: brightness(0.8); /* Reduced blur for sharpness */
+    filter: blur(0.01) brightness(0.8); /* Reduced blur for sharpness */
     z-index: -1; /* Ensures background is behind everything */
 }
